deploy_dadjokes.yml.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dadjokes
  namespace: sre-techtask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dadjokes
  template:
    metadata:
      labels:
        app: dadjokes
    spec:
      containers:
      - image: docker.io/yesinteractive/dadjokes
        name: dadjokes
        imagePullPolicy: IfNotPresent   
        ports:
        - containerPort: 8100
        resources:
          limits:
            cpu: "500m"
            memory: "500Mi"
          requests:
            cpu: "250m"
            memory: "250Mi"
