svc_dadjokes.yml.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dadjokes
  labels:
    app: dadjokes
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8100
  selector:
    app: dadjokes
