ingressnginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: sre-techtask
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules: 
    - host: dadjokes.info
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dadjokes
              port:
                number: 8100
